<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    tools:context="com.happybox.applic.actividad.RegistroActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"

        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <TextView
            android:text="@string/texto_registro_titulo"
            style="@style/Theme.AppLic.titulo"
            android:textAlignment="center"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />


        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/rucAutoCompleteTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/texto_registro_ruc"
                android:maxLines="1"
                android:maxLength="11"
                android:digits="1234567890"
                android:inputType="number"
                />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/razonSocialAutoCompleteTextView"
                android:hint="@string/texto_registro_razon"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/correoAutoCompleteTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/texto_registro_correo"

                />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/claveAutoCompleteTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/texto_registro_clave"
                android:inputType="textPassword"
                />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/texto_seleccion_categorias"
                />



            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/categoriaRecyclerView"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/texto_abono"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >




                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/siRadioButton"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_radio_si"
                    android:onClick="mostrarPago"/>

                <RadioButton
                    android:id="@+id/noRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_radio_no"
                    android:onClick="mostrarPago"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/pagoLinearLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/texto_registro_tipo_tarjeta"
                />



            <Spinner
                android:id="@+id/tipoTarjetaSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/items"
                ></Spinner>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                android:id="@+id/numeroTarjetaAutoCompleteTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/texto_registro_numero_tarjeta"
                android:maxLength="18"
                android:digits="1234567890"
                android:inputType="number"
                />
                </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            <Button

                android:onClick="registrarCliente"
                style="@style/Theme.AppLic.boton"
                android:text="@string/texto_boton_terminar"
               />

        </LinearLayout>


    </LinearLayout>


</ScrollView>

