<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    tools:context="com.happybox.applic.actividad.LicitacionActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <TextView
            android:text="@string/texto_licitacion_titulo"
            style="@style/Theme.AppLic.titulo"
            android:textAlignment="center"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:text="@string/texto_licitacion_info"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
        >

            <TextView
                android:id="@+id/nomenclaturaTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:id="@+id/normativaTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:id="@+id/seaceTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:id="@+id/identificadorTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
            />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TextView
                android:text="@string/texto_licitacion_entidad"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/entidadConvocanteTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:id="@+id/direccionTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TextView
                android:text="@string/texto_licitacion_procedimiento"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/categoriaTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:id="@+id/resumenTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:id="@+id/montoTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:id="@+id/fechaPublicacionTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />

                <TextView
                    android:id="@+id/fechaCierreTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />
            </LinearLayout>

        </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
